--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,7 @@
   
   .desktop .div {
     background-color: #ffffff;
+    overflow: hidden;
     width: 1440px;
     height: 1024px;
     position: relative;
@@ -15,10 +16,10 @@
   
   .desktop .text-wrapper {
     position: absolute;
-    width: 622px;
-    top: 109px;
-    left: 327px;
-    font-family: "Inter-Regular", Helvetica;
+    width: 803px;
+    top: 135px;
+    left: 318px;
+    font-family: "Kantumruy Pro-Regular", Helvetica;
     font-weight: 400;
     color: #000000;
     font-size: 100px;
@@ -26,23 +27,95 @@
     line-height: normal;
   }
   
-  .desktop .overlap-group {
+  .desktop .overlap {
     position: absolute;
-    width: 320px;
-    height: 151px;
-    top: 562px;
-    left: 560px;
-    background-color: #400000;
+    width: 1440px;
+    height: 120px;
+    top: 0;
+    left: 0;
+    background-color: #d9d9d9;
   }
   
   .desktop .text-wrapper-2 {
     position: absolute;
-    top: 6px;
-    left: 4px;
-    font-family: "Inter-Regular", Helvetica;
+    top: 36px;
+    left: 903px;
+    font-family: "Kantumruy Pro-Regular", Helvetica;
     font-weight: 400;
-    color: #ffffff;
-    font-size: 100px;
+    color: #000000;
+    font-size: 40px;
     letter-spacing: 0;
     line-height: normal;
+    white-space: nowrap;
+  }
+  
+  .desktop .text-wrapper-3 {
+    position: absolute;
+    top: 36px;
+    left: 235px;
+    font-family: "Kantumruy Pro-Regular", Helvetica;
+    font-weight: 400;
+    color: #000000;
+    font-size: 40px;
+    letter-spacing: 0;
+    line-height: normal;
+    white-space: nowrap;
+  }
+  
+  .desktop .text-wrapper-4 {
+    position: absolute;
+    top: 36px;
+    left: 589px;
+    font-family: "Kantumruy Pro-Regular", Helvetica;
+    font-weight: 400;
+    color: #000000;
+    font-size: 40px;
+    letter-spacing: 0;
+    line-height: normal;
+    white-space: nowrap;
+  }
+  
+  .desktop .text-wrapper-5 {
+    position: absolute;
+    top: 36px;
+    left: 1140px;
+    font-family: "Kantumruy Pro-Regular", Helvetica;
+    font-weight: 400;
+    color: #000000;
+    font-size: 40px;
+    letter-spacing: 0;
+    line-height: normal;
+    white-space: nowrap;
+  }
+  
+  .desktop .overlap-group {
+    position: absolute;
+    width: 320px;
+    height: 151px;
+    top: 336px;
+    left: 552px;
+    background-color: #400000;
+    border-radius: 41px;
+  }
+  
+  .desktop .text-wrapper-6 {
+    position: absolute;
+    top: 45px;
+    left: 41px;
+    font-family: "Kantumruy Pro-Regular", Helvetica;
+    font-weight: 400;
+    color: #ffffff;
+    font-size: 50px;
+    letter-spacing: 0;
+    line-height: normal;
+    white-space: nowrap;
+  }
+  
+  .desktop .untitled-design {
+    position: absolute;
+    width: 182px;
+    height: 182px;
+    top: -492px;
+    left: -697px;
+    object-fit: cover;
   }
